--- a/.env-example
+++ b/.env-example
@@ -1,13 +1,6 @@
 # App
-APP_NAME=appname
 NODE_ENV=development
 PORT=4000
 
 # Database
-POSTGRES_USER=usernameU
-POSTGRES_PASSWORD=passwordP
-POSTGRES_DB=dbname
-DATABASE_URL=postgres://usernameU:passwordP@localhost:5432/dbname
-
-# Prod
-# DATABASE_URL=postgres://usernameU:passwordP@localhost:5432/dbname
+MONGO_URL=mongodb://localhost:27017/example
