--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "moduleResolution": "node",
         "removeComments": true,
         "noImplicitAny": true,
+        "skipLibCheck": true,
         "strictNullChecks": true,
         "strictFunctionTypes": true,
         "noImplicitThis": true,
